Fixed UI issues in webinspector
Some items from Resources and Storage tabs have been inaccessible and hidden by wrong css.
Applied a fix to keep navigation bar always first and before content.
Secondly removed absolute position to prevent overlapping.

--- a/Source/WebInspectorUI/UserInterface/Views/NavigationSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NavigationSidebarPanel.css
@@ -65,10 +65,8 @@
 }
 
 .sidebar > .panel.navigation > .content > .empty-content-placeholder {
-    position: absolute;
     top: 0;
     bottom: 0;
-    padding: 0;
 }
 
 .sidebar > .panel.navigation > .content .empty-content-placeholder > .message {
